# set

./: .envrc  .gitignore  flake.nix  readme.md
app/: .gitignore  Cargo.toml  set-bot-cache.json
app/src/: commands.rs  main.rs
