[package]
name = "set-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poise = "0.6.1"
#serenity = { version = "0.12" }
tokio = { version = "1.21.2", features = ["macros"] }
unicode-normalization = "0.1.20"